fixed checkstyle violation: Method org.apache.commons.functor.core.comparator.ComparatorFunction.evaluate(Object, Object) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/functor/trunk@1155532 13f79535-47bb-0310-9956-ffa450edef68